# QA_Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/cli/: app.py  commands.py
src/config/: settings.py
src/embeddings/: embedder.py  model_downloader.py
src/ingestion/: loader.py  pipeline.py  splitter.py
src/llm/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  openai_provider.py
src/memory/: history.py
src/rag/: chain.py  retriever.py
src/vectordb/: store.py
src/web/: __init__.py  app.py
src/web/templates/: index.html
tests/: test_ingestion.py  test_memory.py
